[package]
name = "tokio-request"
version = "0.1.0"
authors = ["Moritz Gunz <moritz.gunz@gmail.com>"]

readme = "An asynchronous HTTP client for Rust"
documentation = "https://docs.rs/tokio-request"
homepage = "https://github.com/NeoLegends/tokio-request"
keywords = ["http", "client", "async", "asynchronous"]
license = "MIT"

[dependencies]
curl = "0.3"
futures = "0.1"
mime = "0.2"
rustc-serialize = { version = "0.3", optional = true }
tokio-core = "0.1"
tokio-curl = "0.1"
url = "1.2"

[features]
default = ["rustc-serialization"]
rustc-serialization = ["rustc-serialize"]